# TheMonoHawk

./: .gitignore  POLYPHONIC-METHOD.md  README.md  meson.build
assets/: .gitkeep
lv2/: hawk.ttl  hawk_lv2.cpp  hawk_ui.cpp  manifest.ttl  meson.build
scripts/: install.sh
src/: fft.hpp  fine_tuner.cpp  fine_tuner.hpp  meson.build  note_mapping.cpp  note_mapping.hpp  pitch_detector.cpp  pitch_detector.hpp  ring_buffer.hpp  tunings.hpp
test/: meson.build  test_fine_tuner.cpp  test_note_mapping.cpp  test_pitch_detector.cpp  test_pitch_reliability.cpp
tools/: hawk_cli.cpp  hawk_diag.cpp  hawk_lv2_selftest.cpp  meson.build
